--- a/Domain Enrichment/Process Domains.ipynb
+++ b/Domain Enrichment/Process Domains.ipynb
@@ -1,25 +1,55 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b561b49c",
+   "metadata": {},
+   "source": [
+    "## Importing required modules"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "de0d567c",
+   "execution_count": 4,
+   "id": "167928d4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from crtsh import crtshAPI\n",
+    "from crtsh import crtshAPI ## search certificate /\n",
     "import json\n",
     "import time\n",
     "import csv\n",
-    "from waybackpy import WaybackMachineCDXServerAPI\n",
+    "from waybackpy import WaybackMachineCDXServerAPI ## search historical copies of website\n",
     "import socket\n",
     "import dns.resolver\n",
-    "import whois\n",
+    "import whois # query and response protocol that is often used for querying databases that store registered domain names.\n",
     "import datetime\n",
-    "\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "de0d567c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: #0 - ï»¿ip\n",
+      "Processing: #1 - https://www.apple.com/sg/\n",
+      "completed\n"
+     ]
+    }
+   ],
+   "source": [
     "def download_page(url):\n",
     "\n",
     "    #TODO: Integrate shot-scraper CLI calls\n",
+    "    print(\"current download_page url:\",url)\n",
+    "    !shot-scraper {url}\n",
+    "    print(\"download page completed\")\n",
     "\n",
     "    return 0\n",
     "\n",
@@ -163,6 +193,14 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3981e8df",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
