--- a/IP Enrichment/Process IP.ipynb
+++ b/IP Enrichment/Process IP.ipynb
@@ -2,7 +2,47 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3866e4ba",
+   "id": "2b3b892e",
+   "metadata": {},
+   "source": [
+    "### Changelog \n",
+    "\n",
+    "- Separating **process_iplist()** output from VT calls to folders (todays_date)\n",
+    "- changed output of **process_json()** FROM \"_parsed-combined\" to todays_date_parsed-combined in EACH RESPECTIVE FOLDER "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d748134",
+   "metadata": {},
+   "source": [
+    "### Flow\n",
+    "\n",
+    "1. User edits and feeds ip.csv\n",
+    "2. **process_iplist()** reads each and calls VT api \n",
+    "3. Responses are stored in **\"downloaded_vtresponse\"** and seperated into folders by **respective dates** (DDMMYYYY)\n",
+    "4. **process_json()** reads jsons in each folder and generates a compilation for that day in each folder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7663865c",
+   "metadata": {},
+   "source": [
+    "### Todo List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "242fb81a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce635e96",
    "metadata": {},
    "source": [
     "## Importing Required Modules"
@@ -11,11 +51,10 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0950edbf",
+   "id": "10de9b3c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import base64\n",
     "import hashlib\n",
     "import json\n",
@@ -23,30 +62,21 @@
     "import time\n",
     "import csv\n",
     "import datetime\n",
-    "# from datetime import datetime\n",
     "import os\n",
-    "\n",
     "import pandas as pd\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "a34da424",
-   "metadata": {},
-   "source": [
-    "## a) Receiving Individual / list of IP Addresss"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "2e6c14df",
+   "execution_count": 3,
+   "id": "dca118d9",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Processing: #1 - 34.123.194.52\n",
       "  data.attributes.regional_internet_registry data.attributes.network  \\\n",
       "0                                       ARIN           34.120.0.0/13   \n",
       "\n",
@@ -174,7 +204,7 @@
     "\n",
     "# Process the list of IPs (CSVs ok but IP must be x column in the list)\n",
     "# process_iplist(\"Combined_TestKits_BotIPs\", 0)\n",
-    "# process_iplist(\"ip\", 0)\n",
+    "process_iplist(\"ip\", 0)\n",
     "\n",
     "\n",
     "# Process the downloaded VT JSONs\n",
@@ -190,38 +220,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "affbfe3f",
+   "id": "ec1ab3a9",
    "metadata": {},
-   "source": [
-    "### Flow"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "d27a7665",
+   "id": "1fe521e7",
    "metadata": {},
-   "source": [
-    "1. User edits and feeds ip.csv\n",
-    "2. **process_iplist()** reads each and calls VT api \n",
-    "3. Responses are stored in **\"downloaded_vtresponse\"** and seperated into folders by **respective dates** (DDMMYYYY)\n",
-    "4. **process_json()** reads jsons in each folder and generates a compilation for that day in each folder"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "b8ad106b",
+   "id": "90c6c964",
    "metadata": {},
-   "source": [
-    "### Changelog \n",
-    "\n",
-    "- Separating **process_iplist()** output from VT calls to folders (todays_date)\n",
-    "- changed output of **process_json()** FROM \"_parsed-combined\" to todays_date_parsed-combined in EACH RESPECTIVE FOLDER "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f8c7ae4",
+   "id": "940d80b4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -229,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c57a0fef",
+   "id": "8d75414f",
    "metadata": {},
    "outputs": [],
    "source": []
