wrote down thoughts

--- a/Domain Enrichment/Process Domains.ipynb
+++ b/Domain Enrichment/Process Domains.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a8ea6ff8",
+   "id": "5ccdf0a7",
    "metadata": {},
    "source": [
-    "## Questions\n",
-    "\n"
+    "### Questions / Todo List\n",
+    "\n",
+    "1. What do i do with the download_page(url) function?"
    ]
   },
   {
@@ -19,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "167928d4",
    "metadata": {},
    "outputs": [],
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "de0d567c",
    "metadata": {},
    "outputs": [
@@ -58,7 +59,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\puddi\\AppData\\Local\\Temp\\ipykernel_3204\\1529016050.py:113: DeprecationWarning: please use dns.resolver.resolve() instead\n",
+      "C:\\Users\\puddi\\AppData\\Local\\Temp\\ipykernel_11300\\1395310461.py:113: DeprecationWarning: please use dns.resolver.resolve() instead\n",
       "  nameservers = dns.resolver.query(domain_name, 'NS')\n"
      ]
     },
@@ -228,7 +229,7 @@
     "\n",
     "            cert_variations = process_downloaded_cert(row[0])\n",
     "\n",
-    "            #output_writer.writerow(row + [datetime.datetime.now()] + cert_list + archivedpage_list + dns_list + whois_list)\n",
+    "#             output_writer.writerow(row + [datetime.datetime.now()] + cert_list + archivedpage_list + dns_list + whois_list)\n",
     "\n",
     "            output_writer.writerow(row + [datetime.datetime.now()] + cert_variations)\n",
     "\n",
@@ -244,14 +245,6 @@
     "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9304b1ce",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
