--- a/IP Enrichment/Process IP.ipynb
+++ b/IP Enrichment/Process IP.ipynb
@@ -29,7 +29,19 @@
    "id": "7663865c",
    "metadata": {},
    "source": [
-    "### Todo List"
+    "### Questions / Todo List\n",
+    "\n",
+    "**Update** \n",
+    "\n",
+    "I have managed to get the scripts running from jupyter notebook but have the following questions\n",
+    "\n",
+    "(a) Receiving (via a web interface) either an individual or list of domais / IP addresses --> currently it's fed via CSV, should i create a front-end for people to upload their files?\n",
+    "\n",
+    "(b) Storing list of domains / IP address into a queue based list --> Is this the back-end of things? That is to say, this script runs in the back-end and whenever files come in from front-end it'll trigger the script?\n",
+    "\n",
+    "(c) Carryout enrichment --> Where does this \"processed in the previous X days\" come from? From what i understand, should i create a check such that when new information comes in, it will look at previous histories when the IP/Domain was checked, and continue / stop accordingly? \n",
+    "\n",
+    "(d) storing responses in disk and extracting subset into DB --> is there a specific subset you'd like? DB-wise I would prefer to try NoSQL as i have no experience with it!"
    ]
   },
   {
