--- a/IP Enrichment/Process IP.ipynb
+++ b/IP Enrichment/Process IP.ipynb
@@ -45,34 +45,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "ce635e96",
-   "metadata": {},
-   "source": [
-    "## Importing Required Modules"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "10de9b3c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import base64\n",
-    "import hashlib\n",
-    "import json\n",
-    "import requests\n",
-    "import time\n",
-    "import csv\n",
-    "import datetime\n",
-    "import os\n",
-    "import pandas as pd\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "dca118d9",
    "metadata": {},
    "outputs": [
@@ -80,7 +54,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing: #1 - 34.123.194.52\n",
       "  data.attributes.regional_internet_registry data.attributes.network  \\\n",
       "0                                       ARIN           34.120.0.0/13   \n",
       "\n",
@@ -126,6 +99,16 @@
     }
    ],
    "source": [
+    "import base64\n",
+    "import hashlib\n",
+    "import json\n",
+    "import requests\n",
+    "import time\n",
+    "import csv\n",
+    "import datetime\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
     "API_KEY = '0d9fdb6e32d74b9d12e3d894309531838c3aabe8d66b049fd3a7976fbedf2c68'  #@param  {type: \"string\"}\n",
     "    \n",
     "#'to_process_alertIP' + '.csv'\n",
@@ -213,50 +196,13 @@
     "\n",
     "# Process the downloaded VT JSONs\n",
     "# process_json_folder(\"downloaded_vtresponse_10Jan_combinedFull5k\")\n",
-    "process_json_folder(\"downloaded_vtresponse/20022023\")\n",
+    "process_json_folder(\"downloaded_vtresponse/22022023\")\n",
     "\n",
     "\n",
     "print(\"completed\")\n",
     "exit(0)\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "940d80b4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "be5f0017",
-   "metadata": {},
-   "source": [
-    "### Running Domain for VT "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "f2a9daed",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<Response [200]>\n"
-     ]
-    }
-   ],
-   "source": [
-    "API_KEY = '0d9fdb6e32d74b9d12e3d894309531838c3aabe8d66b049fd3a7976fbedf2c68'  #@param  {type: \"string\"}\n",
-    "\n",
-    "r = requests.get(\"https://www.virustotal.com/api/v3/domains/www.amazon.com\", headers={\"x-apikey\":API_KEY})\n",
-    "print(r)"
    ]
   },
   {
