before proj laptop

--- a/IP Enrichment/Process IP-Backup.ipynb
+++ b/IP Enrichment/Process IP-Backup.ipynb
@@ -56,44 +56,70 @@
      "text": [
       "  data.attributes.regional_internet_registry data.attributes.network  \\\n",
       "0                                       ARIN           34.120.0.0/13   \n",
+      "1                                   RIPE NCC         77.120.224.0/19   \n",
+      "2                                   RIPE NCC          80.253.88.0/21   \n",
       "\n",
       "  data.attributes.tags data.attributes.country  \\\n",
       "0                   []                      US   \n",
+      "1                   []                      UA   \n",
+      "2                   []                      CH   \n",
       "\n",
-      "   data.attributes.last_analysis_date data.attributes.as_owner  \\\n",
-      "0                          1676767972    GOOGLE-CLOUD-PLATFORM   \n",
+      "   data.attributes.last_analysis_date  data.attributes.as_owner  \\\n",
+      "0                        1.676768e+09     GOOGLE-CLOUD-PLATFORM   \n",
+      "1                                 NaN                     Volia   \n",
+      "2                        1.677050e+09  Init7 (Switzerland) Ltd.   \n",
       "\n",
       "   data.attributes.last_analysis_stats.harmless  \\\n",
       "0                                            87   \n",
+      "1                                            87   \n",
+      "2                                            87   \n",
       "\n",
       "   data.attributes.last_analysis_stats.malicious  \\\n",
       "0                                              0   \n",
+      "1                                              0   \n",
+      "2                                              0   \n",
       "\n",
       "   data.attributes.last_analysis_stats.suspicious  \\\n",
       "0                                               0   \n",
+      "1                                               0   \n",
+      "2                                               0   \n",
       "\n",
       "   data.attributes.last_analysis_stats.undetected  ...  \\\n",
       "0                                               0  ...   \n",
+      "1                                               0  ...   \n",
+      "2                                               0  ...   \n",
       "\n",
       "   data.attributes.last_analysis_results.Bfore.Ai PreCrime.engine_name  \\\n",
       "0                                  Bfore.Ai PreCrime                     \n",
+      "1                                  Bfore.Ai PreCrime                     \n",
+      "2                                  Bfore.Ai PreCrime                     \n",
       "\n",
       "   data.attributes.reputation  data.attributes.last_modification_date  \\\n",
       "0                           0                              1676767998   \n",
+      "1                           0                              1606940287   \n",
+      "2                           0                              1677050376   \n",
       "\n",
       "  data.attributes.total_votes.harmless data.attributes.total_votes.malicious  \\\n",
       "0                                    0                                     0   \n",
+      "1                                    0                                     0   \n",
+      "2                                    0                                     0   \n",
       "\n",
-      "  data.attributes.continent                        data.attributes.whois  \\\n",
-      "0                        NA  No match found for googleusercontent.com.\\n   \n",
+      "  data.attributes.continent  \\\n",
+      "0                        NA   \n",
+      "1                        EU   \n",
+      "2                        EU   \n",
       "\n",
-      "    data.type        data.id  \\\n",
-      "0  ip_address  34.123.194.52   \n",
+      "                               data.attributes.whois   data.type  \\\n",
+      "0        No match found for googleusercontent.com.\\n  ip_address   \n",
+      "1  NetRange: 77.0.0.0 - 77.255.255.255\\nCIDR: 77....  ip_address   \n",
+      "2                                                NaN  ip_address   \n",
       "\n",
-      "                                     data.links.self  \n",
-      "0  https://www.virustotal.com/api/v3/ip_addresses...  \n",
+      "          data.id                                    data.links.self  \n",
+      "0   34.123.194.52  https://www.virustotal.com/api/v3/ip_addresses...  \n",
+      "1  77.120.241.130  https://www.virustotal.com/api/v3/ip_addresses...  \n",
+      "2    80.253.95.99  https://www.virustotal.com/api/v3/ip_addresses...  \n",
       "\n",
-      "[1 rows x 370 columns]\n",
+      "[3 rows x 370 columns]\n",
       "completed\n"
      ]
     }
@@ -191,12 +217,12 @@
     "\n",
     "# Process the list of IPs (CSVs ok but IP must be x column in the list)\n",
     "# process_iplist(\"Combined_TestKits_BotIPs\", 0)\n",
-    "process_iplist(\"ip\", 0)\n",
+    "# process_iplist(\"ip\", 0)\n",
     "\n",
     "\n",
     "# Process the downloaded VT JSONs\n",
     "# process_json_folder(\"downloaded_vtresponse_10Jan_combinedFull5k\")\n",
-    "process_json_folder(\"downloaded_vtresponse/22022023\")\n",
+    "process_json_folder(\"downloaded_vtresponse/23022023\")\n",
     "\n",
     "\n",
     "print(\"completed\")\n",
