--- a/IP Enrichment/Process IP-ZhengJie.ipynb
+++ b/IP Enrichment/Process IP-ZhengJie.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "dca118d9",
    "metadata": {
     "scrolled": true
@@ -56,17 +56,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "image not found\n",
-      "processed_date not found\n",
-      "{'whois_date': 1676767998, 'last_analysis_date': 1676767972, 'reputation': 0, 'last_analysis_stats': {'harmless': 87, 'malicious': 0, 'suspicious': 0, 'undetected': 0, 'timeout': 0}, 'total_votes': {'harmless': 0, 'malicious': 0}, 'as_owner': 'GOOGLE-CLOUD-PLATFORM', 'country': 'US', 'asn': 396982, 'image': '', 'processed_date': '23022023'}\n",
-      "last_analysis_date not found\n",
-      "image not found\n",
-      "processed_date not found\n",
-      "{'whois_date': 1606940287, 'last_analysis_date': 1676767972, 'reputation': 0, 'last_analysis_stats': {'harmless': 87, 'malicious': 0, 'suspicious': 0, 'undetected': 0, 'timeout': 0}, 'total_votes': {'harmless': 0, 'malicious': 0}, 'as_owner': 'Volia', 'country': 'UA', 'asn': 25229, 'image': '', 'processed_date': '23022023'}\n",
-      "whois_date not found\n",
-      "image not found\n",
-      "processed_date not found\n",
-      "{'whois_date': 1606940287, 'last_analysis_date': 1677050350, 'reputation': 0, 'last_analysis_stats': {'harmless': 87, 'malicious': 0, 'suspicious': 0, 'undetected': 0, 'timeout': 0}, 'total_votes': {'harmless': 0, 'malicious': 0}, 'as_owner': 'Init7 (Switzerland) Ltd.', 'country': 'CH', 'asn': 13030, 'image': '', 'processed_date': '23022023'}\n",
+      "======= process_iplist() START =======\n",
+      "Processing: #1 - 34.123.194.52\n",
+      "file has been processed on 22022023 which is <7 days ago, will skip API call\n",
+      "Processing: #2 - 77.120.241.130\n",
+      "file has been processed on 22022023 which is <7 days ago, will skip API call\n",
+      "Processing: #3 - 80.253.95.99\n",
+      "file has been processed on 22022023 which is <7 days ago, will skip API call\n",
+      "Processing: #4 - 1.1.1.1\n",
+      "file has been processed on 23022023 which is <7 days ago, will skip API call\n",
+      "======= process_iplist() END ======= \n",
+      "\n",
+      "\n",
+      "======= process_json_folder() START =======\n",
+      "Processing: downloaded_vtresponse/23022023\\1.1.1.1.json\n",
+      "country not found with exception: 'country'\n",
+      "image not found with exception: 'image'\n",
+      "new_row: {'ip_address': '1.1.1.1', 'whois_date': datetime.datetime(2023, 2, 14, 3, 46, 44, tzinfo=tzfile('Singapore')), 'last_analysis_date': datetime.datetime(2023, 2, 22, 23, 52, 26, tzinfo=tzfile('Singapore')), 'reputation': 89, 'last_analysis_stats': {'harmless': 74, 'malicious': 0, 'suspicious': 0, 'undetected': 14, 'timeout': 0}, 'total_votes': {'harmless': 73, 'malicious': 12}, 'as_owner': 'CLOUDFLARENET', 'country': '', 'asn': 13335, 'image': '', 'processed_date': '23022023'}\n",
       "completed\n"
      ]
     }
@@ -81,10 +87,11 @@
     "import datetime\n",
     "import os\n",
     "import pandas as pd\n",
-    "\n",
+    "from dateutil import tz\n",
     "\n",
     "json_template_ip = {\n",
     "    \n",
+    "    \"ip_address\": \"\",\n",
     "    \"whois_date\": \"\",\n",
     "    \"last_analysis_date\": \"\",\n",
     "    \"reputation\": \"\",\n",
@@ -102,20 +109,31 @@
     "    \n",
     "\n",
     "\n",
-    "def process_iplist(filename_to_process, columnIndex):\n",
+    "def process_iplist(filename_to_process, columnIndex, x_days_ago):\n",
+    "    \n",
+    "    print(\"======= process_iplist() START =======\")\n",
+    "    \n",
+    "    # TODO: Make generalised and incorporate timestamp in foldername\n",
+    "    now = datetime.datetime.now()\n",
+    "    dt_string = now.strftime(\"%d%m%Y\")\n",
+    "    d = datetime.timedelta(days = x_days_ago)\n",
+    "    deducted_date = (now - d).strftime(\"%d%m%Y\")\n",
     "    \n",
     "    with open(filename_to_process + \".csv\", newline='') as inputfile:\n",
     "\n",
     "        if not os.path.exists(\"downloaded_vtresponse\"):\n",
     "                os.makedirs(\"downloaded_vtresponse\")\n",
     "\n",
-    "        with open(filename_to_process + \"_tracker.csv\", 'w', newline='') as outputfile:\n",
+    "        with open(filename_to_process + \"_tracker_\" + dt_string + \".csv\", 'w', newline='') as outputfile:\n",
+    "            \n",
     "            ip_list = csv.reader(inputfile, delimiter=',')\n",
     "            output_writer = csv.writer(outputfile, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
     "\n",
     "            counter = 0\n",
     "\n",
     "            for row in ip_list:\n",
+    "                \n",
+    "                to_skip = 0\n",
     "\n",
     "                if counter == 0:\n",
     "                    output_writer.writerow(row + [\"Time Run\"])\n",
@@ -124,30 +142,73 @@
     "                    continue\n",
     "\n",
     "                print(\"Processing: #\" + str(counter) + \" - \" + row[columnIndex])\n",
+    "                \n",
+    "                # Check if IP was proceeded X days ago, if yes, will skip callin\n",
+    "\n",
+    "                folders = os.listdir(\"downloaded_vtresponse\")\n",
+    "\n",
+    "                for folder in folders:\n",
+    "                    \n",
+    "                    if to_skip == 1:\n",
+    "                        break\n",
+    "                        \n",
+    "                    if folder >= deducted_date:\n",
+    "                        files_array = os.listdir(\"downloaded_vtresponse/\" + folder)\n",
+    "#                         print(files_array)\n",
+    "\n",
+    "                        for file in files_array:\n",
+    "                            filename_filetype = file.rsplit('.',1)\n",
+    "                #             print(filename_filedate)\n",
+    "\n",
+    "                            ## if filename == target THEN SKIP + WRITE A NOTE\n",
+    "                            if row[0] == filename_filetype[0]:\n",
+    "                                print(f\"file has been processed on {folder} which is <{x_days_ago} days ago, will skip API call\")\n",
+    "                                to_skip = 1\n",
+    "                                break\n",
+    "\n",
+    "                #     print(os.listdir(\"downloaded_vtresponse/\"+ folder))\n",
+    "\n",
+    "                \n",
+    "                 # make dir to store API Responses\n",
+    "                    if not os.path.exists(\"downloaded_vtresponse/\" + dt_string):\n",
+    "                        os.makedirs(\"downloaded_vtresponse/\" + dt_string)\n",
     "\n",
     "                #Get an IP address Report\n",
-    "                r = requests.get(\"https://www.virustotal.com/api/v3/ip_addresses/\"+row[0], headers={\"x-apikey\":API_KEY})\n",
+    "                if to_skip == 0:\n",
+    "                    r = requests.get(\"https://www.virustotal.com/api/v3/ip_addresses/\"+row[0], headers={\"x-apikey\":API_KEY})\n",
+    "                    \n",
+    "        #with open(\"downloaded_vtresponse/\" + row[columnIndex] +\".json\", \"w\") as outfile:\n",
+    "                    with open(\"downloaded_vtresponse/\" + dt_string + \"/\" + row[columnIndex] + \".json\", \"w\") as outfile:\n",
     "\n",
-    "                # TODO: Make generalised and incorporate timestamp in foldername\n",
-    "                now = datetime.datetime.now()\n",
-    "                dt_string = now.strftime(\"%d%m%Y\")\n",
+    "                        outfile.write(r.text)\n",
+    "\n",
+    "                    output_writer.writerow(row + [datetime.datetime.now()] + [\"Processed\"]) \n",
+    "\n",
+    "                    outputfile.flush()\n",
+    "                    time.sleep(16)\n",
+    "\n",
     "                \n",
-    "                if not os.path.exists(\"downloaded_vtresponse/\" + dt_string):\n",
-    "                    os.makedirs(\"downloaded_vtresponse/\" + dt_string)\n",
-    "#                 with open(\"downloaded_vtresponse/\" + row[columnIndex] +\".json\", \"w\") as outfile:\n",
-    "                with open(\"downloaded_vtresponse/\" + dt_string + \"/\" + row[columnIndex] +\".json\", \"w\") as outfile:\n",
-    "\n",
-    "                    outfile.write(r.text)\n",
-    "\n",
-    "                output_writer.writerow(row + [datetime.datetime.now()])\n",
-    "\n",
-    "                outputfile.flush()\n",
-    "\n",
+    "                else:\n",
+    "                    \n",
+    "                    output_writer.writerow(row + [datetime.datetime.now()] + [\"Not Processed\"]) \n",
+    "                    outputfile.flush()\n",
+    "                    \n",
+    "                \n",
     "                counter += 1\n",
-    "                time.sleep(16)\n",
+    "                \n",
+    "    print(\"======= process_iplist() END ======= \\n\\n\")\n",
+    "#                 time.sleep(16)\n",
     "\n",
+    "# def check_json_folder(file, folder_to_process,x_days_ago):\n",
+    "    \n",
+    "#     for filename in os.listdir(folder_to_process):\n",
+    "#         # [IP,Date]\n",
+    "#         filename_array = filename_.split('_')\n",
+    "        \n",
     "\n",
     "def process_json_folder(folder_to_process,json_template):\n",
+    "    \n",
+    "    print(\"======= process_json_folder() START =======\")\n",
     "    \n",
     "    # Get DDMMYYYY to input later\n",
     "    now = datetime.datetime.now()\n",
@@ -164,6 +225,7 @@
     "        # check if it is a file\n",
     "        if os.path.isfile(f) and f[-5:]==\".json\":\n",
     "\n",
+    "            print(\"Processing:\",f)\n",
     "            # Opening JSON file\n",
     "            f = open(f)\n",
     "#             print(f)\n",
@@ -177,18 +239,35 @@
     "            new_row = json_template\n",
     "\n",
     "            # populate fields in JSON template\n",
-    "            for key in new_row:\n",
-    "                try:\n",
-    "            #         print(loaded_json['data']['attributes'][key]) \n",
-    "                    new_row[key] = data['data']['attributes'][key]\n",
+    "            for key in new_row:    \n",
+    "#                 print(\"current key\", key)\n",
     "\n",
-    "                except: \n",
-    "                    print(key,\"not found\")\n",
+    "                try:\n",
+    "                    current_value = data['data']['attributes'][key]\n",
+    "                    \n",
+    "                    # replace epoch with legible date format\n",
+    "                    if key[-4:] == \"date\":\n",
+    "                        to_zone = tz.gettz('Singapore')\n",
+    "                        date_time = datetime.datetime.fromtimestamp( current_value )  \n",
+    "                        current_value = date_time.replace(tzinfo=to_zone)\n",
+    "                        \n",
+    "            \n",
+    "                    new_row[key] = current_value\n",
+    "\n",
+    "                except Exception as e: \n",
+    "               \n",
     "                    if key == \"processed_date\":\n",
     "                        new_row[key] = dt_string\n",
     "                    \n",
-    "            print(new_row)\n",
+    "                    elif key == \"ip_address\":\n",
+    "                        new_row[key] = data['data']['id']\n",
+    "                    \n",
+    "                    else:\n",
+    "                        print(key,\"not found with exception:\",e)\n",
+    "\n",
+    "            print(\"new_row:\", new_row)\n",
     "            df_result = pd.json_normalize(new_row)\n",
+    "            \n",
     "            combined_df = pd.concat([combined_df, df_result], ignore_index=True, sort=False)\n",
     "    \n",
     "    \n",
@@ -198,11 +277,13 @@
     "    \n",
     "    combined_df.to_csv(folder_to_process + '/' + dt_string + '_parsed-combined.csv')\n",
     "    \n",
+    "        print(\"======= process_json_folder() START =======\")\n",
+    "\n",
     "\n",
     "\n",
     "# Process the list of IPs (CSVs ok but IP must be x column in the list)\n",
     "# process_iplist(\"Combined_TestKits_BotIPs\", 0)\n",
-    "# process_iplist(\"ip\", 0)\n",
+    "process_iplist(\"ip\", 0,7)\n",
     "\n",
     "\n",
     "# Process the downloaded VT JSONs\n",
@@ -213,16 +294,9 @@
     "print(\"completed\")\n",
     "exit(0)\n",
     "\n",
+    "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7159acef",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -257,13 +331,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "d8767b20",
    "metadata": {},
    "outputs": [],
    "source": [
     "json_template_ip = {\n",
     "    \n",
+    "    \"ip_address\": \"\",\n",
     "    \"whois_date\": \"\",\n",
     "    \"last_analysis_date\": \"\",\n",
     "    \"reputation\": \"\",\n",
@@ -367,40 +442,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "670b3af1",
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "image not found\n",
-      "processed_date not found\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "{'whois_date': 1676767998,\n",
-       " 'last_analysis_date': 1676767972,\n",
-       " 'reputation': 0,\n",
-       " 'last_analysis_stats': {'harmless': 87,\n",
-       "  'malicious': 0,\n",
-       "  'suspicious': 0,\n",
-       "  'undetected': 0,\n",
-       "  'timeout': 0},\n",
-       " 'total_votes': {'harmless': 0, 'malicious': 0},\n",
-       " 'as_owner': 'GOOGLE-CLOUD-PLATFORM',\n",
-       " 'country': 'US',\n",
-       " 'asn': 396982,\n",
-       " 'image': '',\n",
-       " 'processed_date': '23022023'}"
+       "'34.123.194.52'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,17 +473,7 @@
     "loaded_json = json.load(f)\n",
     "                \n",
     "\n",
-    "for key in new_row:\n",
-    "    try:\n",
-    "#         print(loaded_json['data']['attributes'][key]) \n",
-    "        new_row[key] = loaded_json['data']['attributes'][key]\n",
-    "\n",
-    "    except: \n",
-    "        print(key,\"not found\")\n",
-    "        if key == \"processed_date\":\n",
-    "            new_row[key] = dt_string\n",
-    "            \n",
-    "new_row"
+    "loaded_json['data']['id']"
    ]
   },
   {
@@ -457,7 +501,7 @@
     "\n",
     "print(\"utc:\", date_time)\n",
     "\n",
-    "to_zone = tz.gettz('US/Mountain')\n",
+    "to_zone = tz.gettz('Singapore')\n",
     "new_date_time = date_time.replace(tzinfo=to_zone)\n",
     "\n",
     "\n",
@@ -467,8 +511,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "333cfbbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'16022023'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c40f71b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16022023\n",
+      "['22022023_parsed-combined.csv', '34.123.194.52.json', '77.120.241.130.json', '80.253.95.99.json']\n",
+      "['22022023', 'parsed-combined.csv']\n",
+      "['34.123.194.52.json']\n",
+      "['77.120.241.130.json']\n",
+      "['80.253.95.99.json']\n",
+      "22022023\n",
+      "['23022023_parsed-combined.csv', '34.123.194.52.json', '77.120.241.130.json', '80.253.95.99.json']\n",
+      "['23022023', 'parsed-combined.csv']\n",
+      "['34.123.194.52.json']\n",
+      "['77.120.241.130.json']\n",
+      "['80.253.95.99.json']\n",
+      "23022023\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import datetime\n",
+    "\n",
+    "\n",
+    "now = datetime.datetime.now()\n",
+    "dt_string = now.strftime(\"%d%m%Y\")\n",
+    "d = datetime.timedelta(days = 7)\n",
+    "a = now - d\n",
+    "a = a.strftime(\"%d%m%Y\")\n",
+    "a\n",
+    "\n",
+    "print(a)\n",
+    "\n",
+    "folders = os.listdir(\"downloaded_vtresponse\")\n",
+    "\n",
+    "for folder in folders:\n",
+    "    if folder >= a:\n",
+    "        files_array = os.listdir(\"downloaded_vtresponse/\" + folder)\n",
+    "        print(files_array)\n",
+    "        \n",
+    "        for file in files_array:\n",
+    "#             filename_filedate = file.split('_')\n",
+    "#             print(filename_filedate)\n",
+    "            \n",
+    "            ## if filename == target THEN SKIP + WRITE A NOTE\n",
+    "\n",
+    "        print(folder)\n",
+    "        \n",
+    "#     print(os.listdir(\"downloaded_vtresponse/\"+ folder))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "8ee3d8b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['34.123.194', '52']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = \"34.123.194.52\"\n",
+    "test.rsplit('.',1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be16561a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -490,7 +634,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
