--- a/IP Enrichment/Process IP-ZhengJie.ipynb
+++ b/IP Enrichment/Process IP-ZhengJie.ipynb
@@ -46,10 +46,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "dca118d9",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -64,7 +64,6 @@
       "Processing: #3 - 80.253.95.99\n",
       "file has been processed on 22022023 which is <7 days ago, will skip API call\n",
       "Processing: #4 - 1.1.1.1\n",
-      "file has been processed on 23022023 which is <7 days ago, will skip API call\n",
       "======= process_iplist() END ======= \n",
       "\n",
       "\n",
@@ -72,7 +71,10 @@
       "Processing: downloaded_vtresponse/23022023\\1.1.1.1.json\n",
       "country not found with exception: 'country'\n",
       "image not found with exception: 'image'\n",
-      "new_row: {'ip_address': '1.1.1.1', 'whois_date': datetime.datetime(2023, 2, 14, 3, 46, 44, tzinfo=tzfile('Singapore')), 'last_analysis_date': datetime.datetime(2023, 2, 22, 23, 52, 26, tzinfo=tzfile('Singapore')), 'reputation': 89, 'last_analysis_stats': {'harmless': 74, 'malicious': 0, 'suspicious': 0, 'undetected': 14, 'timeout': 0}, 'total_votes': {'harmless': 73, 'malicious': 12}, 'as_owner': 'CLOUDFLARENET', 'country': '', 'asn': 13335, 'image': '', 'processed_date': '23022023'}\n",
+      "new_row: {'ip_address': '1.1.1.1', 'whois_date': datetime.datetime(2023, 2, 14, 3, 46, 44), 'last_analysis_date': datetime.datetime(2023, 2, 23, 13, 22, 18), 'reputation': 89, 'last_analysis_stats': {'harmless': 74, 'malicious': 0, 'suspicious': 0, 'undetected': 14, 'timeout': 0}, 'total_votes': {'harmless': 73, 'malicious': 12}, 'as_owner': 'CLOUDFLARENET', 'country': '', 'asn': 13335, 'image': '', 'processed_date': datetime.datetime(2023, 2, 23, 15, 47, 5, 553717, tzinfo=<DstTzInfo 'Singapore' +08+8:00:00 STD>)}\n",
+      "======= process_json_folder() END ======= \n",
+      "\n",
+      "\n",
       "completed\n"
      ]
     }
@@ -88,6 +90,9 @@
     "import os\n",
     "import pandas as pd\n",
     "from dateutil import tz\n",
+    "import pytz\n",
+    "from pymongo import MongoClient\n",
+    "\n",
     "\n",
     "json_template_ip = {\n",
     "    \n",
@@ -106,6 +111,9 @@
     "}\n",
     "\n",
     "API_KEY = '0d9fdb6e32d74b9d12e3d894309531838c3aabe8d66b049fd3a7976fbedf2c68'  #@param  {type: \"string\"}\n",
+    "\n",
+    "client = MongoClient('localhost',27017)\n",
+    "db = client['d_ip_enrich']\n",
     "    \n",
     "\n",
     "\n",
@@ -133,8 +141,6 @@
     "\n",
     "            for row in ip_list:\n",
     "                \n",
-    "                to_skip = 0\n",
-    "\n",
     "                if counter == 0:\n",
     "                    output_writer.writerow(row + [\"Time Run\"])\n",
     "                    outputfile.flush()\n",
@@ -143,38 +149,15 @@
     "\n",
     "                print(\"Processing: #\" + str(counter) + \" - \" + row[columnIndex])\n",
     "                \n",
-    "                # Check if IP was proceeded X days ago, if yes, will skip callin\n",
-    "\n",
-    "                folders = os.listdir(\"downloaded_vtresponse\")\n",
-    "\n",
-    "                for folder in folders:\n",
-    "                    \n",
-    "                    if to_skip == 1:\n",
-    "                        break\n",
-    "                        \n",
-    "                    if folder >= deducted_date:\n",
-    "                        files_array = os.listdir(\"downloaded_vtresponse/\" + folder)\n",
-    "#                         print(files_array)\n",
-    "\n",
-    "                        for file in files_array:\n",
-    "                            filename_filetype = file.rsplit('.',1)\n",
-    "                #             print(filename_filedate)\n",
-    "\n",
-    "                            ## if filename == target THEN SKIP + WRITE A NOTE\n",
-    "                            if row[0] == filename_filetype[0]:\n",
-    "                                print(f\"file has been processed on {folder} which is <{x_days_ago} days ago, will skip API call\")\n",
-    "                                to_skip = 1\n",
-    "                                break\n",
-    "\n",
-    "                #     print(os.listdir(\"downloaded_vtresponse/\"+ folder))\n",
-    "\n",
+    "                # Check if IP was proceeded x_days_ago, if yes, will skip calling\n",
+    "                file_skip = to_skip(row[0], \"downloaded_vtresponse\", x_days_ago)\n",
     "                \n",
     "                 # make dir to store API Responses\n",
-    "                    if not os.path.exists(\"downloaded_vtresponse/\" + dt_string):\n",
-    "                        os.makedirs(\"downloaded_vtresponse/\" + dt_string)\n",
+    "                if not os.path.exists(\"downloaded_vtresponse/\" + dt_string):\n",
+    "                    os.makedirs(\"downloaded_vtresponse/\" + dt_string)\n",
     "\n",
     "                #Get an IP address Report\n",
-    "                if to_skip == 0:\n",
+    "                if file_skip == 0:\n",
     "                    r = requests.get(\"https://www.virustotal.com/api/v3/ip_addresses/\"+row[0], headers={\"x-apikey\":API_KEY})\n",
     "                    \n",
     "        #with open(\"downloaded_vtresponse/\" + row[columnIndex] +\".json\", \"w\") as outfile:\n",
@@ -199,19 +182,51 @@
     "    print(\"======= process_iplist() END ======= \\n\\n\")\n",
     "#                 time.sleep(16)\n",
     "\n",
-    "# def check_json_folder(file, folder_to_process,x_days_ago):\n",
+    "\n",
+    "# check if file exist in folder_to_process during x_days_ago, returns 0 or 1\n",
+    "def to_skip(filename, folder_to_process, x_days_ago):\n",
     "    \n",
-    "#     for filename in os.listdir(folder_to_process):\n",
-    "#         # [IP,Date]\n",
-    "#         filename_array = filename_.split('_')\n",
+    "    now = datetime.datetime.now()\n",
+    "    dt_string = now.strftime(\"%d%m%Y\")\n",
+    "    d = datetime.timedelta(days = x_days_ago)\n",
+    "    deducted_date = (now - d).strftime(\"%d%m%Y\")\n",
+    "    to_skip = 0\n",
+    "\n",
+    "    folders = os.listdir(\"downloaded_vtresponse\")\n",
+    "    folders = os.listdir(folder_to_process)\n",
+    "    \n",
+    "\n",
+    "    for folder in folders:\n",
+    "\n",
+    "        if to_skip == 1:\n",
+    "            break\n",
+    "\n",
+    "        if folder >= deducted_date:\n",
+    "            files_array = os.listdir(\"downloaded_vtresponse/\" + folder)\n",
+    "#                         print(files_array)\n",
+    "\n",
+    "            for file in files_array:\n",
+    "                filename_filetype = file.rsplit('.',1)\n",
+    "    #             print(filename_filedate)\n",
+    "\n",
+    "                ## if filename == target THEN SKIP + WRITE A NOTE\n",
+    "                if filename == filename_filetype[0]:\n",
+    "                    print(f\"file has been processed on {folder} which is <{x_days_ago} days ago, will skip API call\")\n",
+    "                    to_skip = 1\n",
+    "                    break\n",
     "        \n",
+    "    \n",
+    "    return to_skip\n",
+    "\n",
+    "\n",
+    "    #     print(os.listdir(\"downloaded_vtresponse/\"+ folder))    \n",
     "\n",
     "def process_json_folder(folder_to_process,json_template):\n",
     "    \n",
     "    print(\"======= process_json_folder() START =======\")\n",
     "    \n",
     "    # Get DDMMYYYY to input later\n",
-    "    now = datetime.datetime.now()\n",
+    "    now = datetime.datetime.now(pytz.timezone(\"Singapore\"))\n",
     "    dt_string = now.strftime(\"%d%m%Y\")\n",
     "\n",
     "    # Usual Folder: downloaded_vtresponse\n",
@@ -245,11 +260,13 @@
     "                try:\n",
     "                    current_value = data['data']['attributes'][key]\n",
     "                    \n",
-    "                    # replace epoch with legible date format\n",
+    "                    # replace epoch with legible date format for whois_date and last_analysis_date\n",
     "                    if key[-4:] == \"date\":\n",
     "                        to_zone = tz.gettz('Singapore')\n",
     "                        date_time = datetime.datetime.fromtimestamp( current_value )  \n",
-    "                        current_value = date_time.replace(tzinfo=to_zone)\n",
+    "#                         current_value = date_time.replace(tzinfo=to_zone)\n",
+    "                        date_time.replace(tzinfo=to_zone)\n",
+    "                        current_value = date_time\n",
     "                        \n",
     "            \n",
     "                    new_row[key] = current_value\n",
@@ -257,7 +274,7 @@
     "                except Exception as e: \n",
     "               \n",
     "                    if key == \"processed_date\":\n",
-    "                        new_row[key] = dt_string\n",
+    "                        new_row[key] = now\n",
     "                    \n",
     "                    elif key == \"ip_address\":\n",
     "                        new_row[key] = data['data']['id']\n",
@@ -266,18 +283,20 @@
     "                        print(key,\"not found with exception:\",e)\n",
     "\n",
     "            print(\"new_row:\", new_row)\n",
+    "            db.ip.insert_one(new_row)\n",
+    "\n",
     "            df_result = pd.json_normalize(new_row)\n",
     "            \n",
     "            combined_df = pd.concat([combined_df, df_result], ignore_index=True, sort=False)\n",
     "    \n",
     "    \n",
     "#     print(combined_df)\n",
-    "    now = datetime.datetime.now()\n",
+    "    now = datetime.datetime.now(pytz.timezone(\"Singapore\"))\n",
     "    dt_string = now.strftime(\"%d%m%Y\")\n",
     "    \n",
     "    combined_df.to_csv(folder_to_process + '/' + dt_string + '_parsed-combined.csv')\n",
     "    \n",
-    "        print(\"======= process_json_folder() START =======\")\n",
+    "    print(\"======= process_json_folder() END ======= \\n\\n\")\n",
     "\n",
     "\n",
     "\n",
@@ -531,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "c40f71b7",
+   "id": "851f0387",
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8ee3d8b9",
+   "id": "0c673999",
    "metadata": {},
    "outputs": [
     {
@@ -611,11 +630,102 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "cf162990",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True), 'test')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pymongo import MongoClient\n",
+    "client = MongoClient('localhost',27017)\n",
+    "db = client['test']\n",
+    "db\n",
+    "# db.student.insert({\"Akshay\":500})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6f239b1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True), 'test'), 'test_collection')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "collection = db.test_collection\n",
+    "collection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "05badcb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.InsertOneResult at 0x2108f0a8af0>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "collection.insert_one({\"Test\":\"Hello\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "fc78f492",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.InsertOneResult at 0x21090f1daf0>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.student.insert_one({\"Test\":2})"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "be16561a",
+   "id": "9c5db925",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\""
+   ]
   }
  ],
  "metadata": {
