--- a/IP Enrichment/Process IP-ZhengJie.ipynb
+++ b/IP Enrichment/Process IP-ZhengJie.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "dca118d9",
    "metadata": {
     "scrolled": false
@@ -64,6 +64,7 @@
       "Processing: #3 - 80.253.95.99\n",
       "file has been processed on 22022023 which is <7 days ago, will skip API call\n",
       "Processing: #4 - 1.1.1.1\n",
+      "file has been processed on 23022023 which is <7 days ago, will skip API call\n",
       "======= process_iplist() END ======= \n",
       "\n",
       "\n",
@@ -71,7 +72,8 @@
       "Processing: downloaded_vtresponse/23022023\\1.1.1.1.json\n",
       "country not found with exception: 'country'\n",
       "image not found with exception: 'image'\n",
-      "new_row: {'ip_address': '1.1.1.1', 'whois_date': datetime.datetime(2023, 2, 14, 3, 46, 44), 'last_analysis_date': datetime.datetime(2023, 2, 23, 13, 22, 18), 'reputation': 89, 'last_analysis_stats': {'harmless': 74, 'malicious': 0, 'suspicious': 0, 'undetected': 14, 'timeout': 0}, 'total_votes': {'harmless': 73, 'malicious': 12}, 'as_owner': 'CLOUDFLARENET', 'country': '', 'asn': 13335, 'image': '', 'processed_date': datetime.datetime(2023, 2, 23, 15, 47, 5, 553717, tzinfo=<DstTzInfo 'Singapore' +08+8:00:00 STD>)}\n",
+      "new_row[key]: 2023-02-23 16:13:49.294860+08:00\n",
+      "new_row: {'ip_address': '1.1.1.1', 'whois_date': datetime.datetime(2023, 2, 14, 3, 46, 44), 'last_analysis_date': datetime.datetime(2023, 2, 23, 13, 22, 18), 'reputation': 89, 'last_analysis_stats': {'harmless': 75, 'malicious': 1, 'suspicious': 0, 'undetected': 12, 'timeout': 0}, 'total_votes': {'harmless': 73, 'malicious': 12}, 'as_owner': 'CLOUDFLARENET', 'country': '', 'asn': 13335, 'image': '', 'processed_date': datetime.datetime(2023, 2, 23, 16, 13, 49, 294860, tzinfo=<DstTzInfo 'Singapore' +08+8:00:00 STD>)}\n",
       "======= process_json_folder() END ======= \n",
       "\n",
       "\n",
@@ -201,6 +203,7 @@
     "        if to_skip == 1:\n",
     "            break\n",
     "\n",
+    "        # target folders within X days range\n",
     "        if folder >= deducted_date:\n",
     "            files_array = os.listdir(\"downloaded_vtresponse/\" + folder)\n",
     "#                         print(files_array)\n",
@@ -225,7 +228,7 @@
     "    \n",
     "    print(\"======= process_json_folder() START =======\")\n",
     "    \n",
-    "    # Get DDMMYYYY to input later\n",
+    "    # Get Date + Time to input later\n",
     "    now = datetime.datetime.now(pytz.timezone(\"Singapore\"))\n",
     "    dt_string = now.strftime(\"%d%m%Y\")\n",
     "\n",
@@ -275,6 +278,7 @@
     "               \n",
     "                    if key == \"processed_date\":\n",
     "                        new_row[key] = now\n",
+    "                        print(\"new_row[key]:\", now)\n",
     "                    \n",
     "                    elif key == \"ip_address\":\n",
     "                        new_row[key] = data['data']['id']\n",
@@ -301,7 +305,7 @@
     "\n",
     "\n",
     "# Process the list of IPs (CSVs ok but IP must be x column in the list)\n",
-    "# process_iplist(\"Combined_TestKits_BotIPs\", 0)\n",
+    "# (filename.csv, column, x_days_ago)\n",
     "process_iplist(\"ip\", 0,7)\n",
     "\n",
     "\n",
@@ -550,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "851f0387",
+   "id": "5d9dbfa8",
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "0c673999",
+   "id": "257a558b",
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "cf162990",
+   "id": "abcaae1b",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6f239b1e",
+   "id": "821b5a4b",
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "05badcb0",
+   "id": "b5ab152b",
    "metadata": {},
    "outputs": [
     {
@@ -698,29 +702,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "fc78f492",
+   "execution_count": 7,
+   "id": "f7e3fdbb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x21090f1daf0>"
+       "datetime.datetime(2023, 2, 23, 16, 12, 31, 470966, tzinfo=<DstTzInfo 'Singapore' +08+8:00:00 STD>)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "db.student.insert_one({\"Test\":2})"
+    "import datetime\n",
+    "import pytz\n",
+    "now = datetime.datetime.now(pytz.timezone(\"Singapore\"))\n",
+    "now\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c5db925",
+   "id": "36f1d0db",
    "metadata": {},
    "outputs": [],
    "source": [
